Fix page overflows

--- a/src/styles.css
+++ b/src/styles.css
@@ -86,7 +86,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: min(100%, 100svh);
+  height: 100%;
   background: url("src/lib/images/grainy-texture.png") center center;
   background-size: 64px 64px;
   filter: invert(0.15);
